# ReColor

./: .gitignore  .profile  ANDROID_BUILD_FIXED.md  ARCHITECTURE_OVERVIEW.md  AUTHENTICATION.md  App.tsx  DEPLOYMENT.md  DEPLOY_TO_HEROKU.md  FCM_DOCUMENTATION.md  HEROKU_DEPLOYMENT.md  ISHIHARA_CLINICAL_VALIDATION.md  ISHIHARA_GUIDE.md  ISHIHARA_IMPLEMENTATION.md  ISHIHARA_ONDEVICE_STATUS.md  KMEANS_INTEGRATION.md  PROGRESS_SUMMARY.md  Procfile  QUICK_START.md  README.md  app.json  build-android.bat  debug_env.py  generate_daltonlens_ishihara.py  generate_ishihara_plates.py  generate_test_plates.py  google-services.json  list_all_profiles.py  package-lock.json  package.json  requirements.txt  test_api_with_timestamp.py  test_authentication.py  test_calibration_endpoint.py  test_config.py  test_evaluation_metrics.py  test_fcm.py  test_full_pipeline.py  test_image_processing.py  test_integration_final.py  test_integration_simple.py  (+8 more)
ReColor-Backend/: README.md  (+8 more)
backend/: pyproject.toml  test_firebase_save.py
backend/app/: __init__.py  config.py  main.py
backend/app/evaluation/: __init__.py  metrics.py
backend/app/ishihara/: __init__.py  test.py
backend/app/middleware/: auth.py
backend/app/pipeline/: __init__.py  clustering.py  cnn_inference.py  daltonization.py  processing.py  profile.py
backend/app/routes/: calibration.py  health.py  ishihara.py  notifications.py  processing.py  static.py
backend/app/schemas/: __init__.py  calibration.py  processing.py
backend/app/services/: firebase.py  inference.py
backend/tests/: test_calibration.py  test_processing.py
(+142 files in other folders)
